# pept

./: .gitignore  LICENSE  README.org  pept.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
